# P8

./: README.md  VentajasComparativas.md  our_library_mvp-8.0.0-py3-none-any.whl  tutorial.ipynb  use_case.ipynb
data/: ALL_REGIONS_2024_daily_temperature.csv  CO2.xlsx  acceso_capital_departamento_transportes_SI_NO.csv  denuncias_2024_por_mes_wide.csv  recursos_mincetur_con_region_geografica.csv
models/: knn.joblib  recursos.parquet  tfidf.joblib
notebooks/: Carita_clima.ipynb  Criminalidad.ipynb  Dashboard.ipynb  Girasol_Térmico.ipynb  HuellasCO2.ipynb
our_library_mvp/: README.md  pyproject.toml
our_library_mvp/src/our_library/: __init__.py  graph2_1.py  requirements.txt  turismo_dashboard_model.py  turismo_extra_charts.py  turismo_recs.py
